0.40:
 * Fixed directory deletion short circuiting processing the rest of a commit.
 * Fix to boost macros for Macs and non-GNU systems (mistydemeo).
 * Autotools improvements (flameeyes).

0.39:
 * Fixed blurry non power of 2 logos.
 * File colour changes now supported in custom logs (rmyorston).
 * Fixed building against Boost 1.50 (svenstaro).
 * Updated boost autoconf macros (flameeyes).
 * Autogen script (matthiaskrgr).

0.38:
 * New high quality sprites.
 * Fullscreen toggle with alt + enter.
 * Window is now resizable. -WIDTHxHEIGHT! creates a non-resizable window.
 * Lowered minimum zoom distance.
 * Use AM_CPPFLAGS in Makefile.am to allow passing custom CPPFLAGS.
 * Don't add files that match the path of a known directory.
 * Fixed divide by zero in text shader causing artifacts on some video cards.
 * Recursively search for repository directory when log-format not specified
   (thanks to Jörg Bachmann for original concept / prototype).
 * New dependency on Boost Filesystem.
 * Doubled the maximum zoom out distance.
 * Allow negative timestamps before 1970 in custom log (artzub).
 * Fix for UTF8-CPP checked.h compilation issue (vszakats).
 * Fixed bug causing missing characters in text.
 * Fixed --highlight-users option not using highlight-colour.
 * highlight-colour default changed to white.
 * Added --selection-colour option (applied to selected users and files).
 * Added --dir-colour option (applied to directories).

0.37:
 * Made SVN log GMT timestamp conversion fix portable.

0.36:
 * Fixed SVN log GMT timestamp conversion.
 * Fixed issue with sub-dirs of deleted dir not being removed in some cases.

0.35:
 * Added long file extension truncation handling to file key (--key).
 * Treat changes in Mercurial log files with the same time/user as one commit.
 * Fixed handling of spaces in directory names with Mercurial.
 * Fixed --font-colour option.

0.34:
 * Now using VBOs and shaders for faster rendering when OpenGL 2.0 is available.