@@ -1,4 +1,5 @@
 0.40:
+ * Added caption support.
  * Fixed directory deletion short circuiting processing the rest of a commit.
  * Fix to boost macros for Macs and non-GNU systems (mistydemeo).
  * Autotools improvements (flameeyes).
